--- a/Section 16 - DOM/DOM Challenge Starting Files/index.html
+++ b/Section 16 - DOM/DOM Challenge Starting Files/index.html
@@ -10,7 +10,7 @@
 
     <input type="checkbox" />
 
-    <button style=":active color:red;">Click Me</button>
+    <button style=":active color:red;" onclick="toggleHeader()">Click Me</button>
 
     <ul>
       <li class="list">
